[#22573] add path to python in profile.

--- a/data/profile.sh.tmpl
+++ b/data/profile.sh.tmpl
@@ -13,6 +13,12 @@ PYTHONPATH=\
 $PYTHONPATH
 export PYTHONPATH
 
+# as PYTHONHOME is changed, path to 'python' must preceed all others if a
+# subprocess call it
+PATH=@PYTHON_DIRNAME@:\
+$PATH
+export PATH
+
 PYTHONHOME=@PYTHONHOME@
 export PYTHONHOME
 # as PYTHONHOME is changed, path to 'python' must preceed all others if a
