--- a/data/profile.sh.tmpl
+++ b/data/profile.sh.tmpl
@@ -15,3 +15,8 @@ export PYTHONPATH
 
 PYTHONHOME=@PYTHONHOME@
 export PYTHONHOME
+# as PYTHONHOME is changed, path to 'python' must preceed all others if a
+# subprocess call it
+PATH=@PYTHON_DIRNAME@:\
+$PATH
+export PATH
